crate/sinex-primitives/tests/source_contract_compile_fail/missing_privacy.stderr
error[E0599]: no method named `build` found for struct `SourceRuntimeBindingBuilder<HasOutput, MissingPrivacy, HasCheckpointFamily, HasRuntimeShape, HasBuildImpact>` in the current scope
  --> tests/source_contract_compile_fail/missing_privacy.rs:17:6
   |
 7 |       let _ = SourceRuntimeBinding::builder(
   |  _____________-
 8 | |         subject_ref!("runtime_unit:test.missing_privacy"),
 9 | |         "test.missing_privacy",
10 | |         "test",
...  |
16 | |     .build_impact(SourceBuildImpact::ZERO)
17 | |     .build();
   | |     -^^^^^ method not found in `SourceRuntimeBindingBuilder<HasOutput, MissingPrivacy, HasCheckpointFamily, HasRuntimeShape, HasBuildImpact>`
   | |_____|
   |
   |
   = note: the method was found for `SourceRuntimeBindingBuilder<HasOutput, HasPrivacy, HasCheckpointFamily, HasRuntimeShape, HasBuildImpact>`
